made changes to prevent scrolling, fixed weird line and gap in footer

--- a/custom.css
+++ b/custom.css
@@ -72,4 +72,24 @@ div.booknow {
     width: 350px;
 }
 
+.social-media {
+  float: right;
+  list-style: none;
+  display: table;
+  li {
+      display: block;
+      display: table-cell;
+  }
+  a {
+      display: block;
+      height: 25px;
+      width: 22px;
+      background-position: center center;
+      background-repeat: no-repeat;
+  }
+
+body, html {
+    overflow-x: hidden;
+
+}
 
